# CompareIt

./: .gitignore  CMakeLists.txt  README.md
src/: Utils.h  main.cpp
src/Comparison/: Comparator.cpp  Comparator.h  ComparatorWorker.cpp  ComparatorWorker.h  Directory.cpp  Directory.h  Entry.h  File.cpp  File.h  Hasher.h  ProgressReporter.cpp  ProgressReporter.h  ProgressStatus.h
src/Core/: Application.cpp  Application.h  Window.cpp  Window.h
src/Entries/: Directory.cpp  Directory.h  Entry.h  File.cpp
